# adaptive-ags

./: .gitignore  CMakeLists.txt  README.md
adaptive_ags/: defines.hpp  method.cpp  method.hpp  method_test.cpp  problem.hpp  result.hpp
adaptive_ags/details/: intervals.hpp  intervals_test.cpp  task.hpp
adaptive_ags/problems/: from_callback.hpp  grishagins.hpp  grishagins_impl.hpp
adaptive_ags/testing/: defines.hpp  problems.hpp  ref_interval_set.hpp  ref_nested_method.hpp  utils.hpp
adaptive_ags/utils/: common.hpp  zip_iterator.hpp
cmake/: FindNumPy.cmake
examples/cpp/: build.sh  minimize.cpp
examples/python/: minimize.py
python/: CMakeLists.txt  setup.py
python/adaptive_ags/: __init__.py  adaptive_ags.py  adaptive_ags_.pxd  adaptive_ags_.pyx
